[gd_scene load_steps=12 format=2]

[ext_resource path="res://src/Player/PlayerKinematic.gd" type="Script" id=1]
[ext_resource path="res://assets/player_sprite.png" type="Texture" id=2]
[ext_resource path="res://assets/cannon.png" type="Texture" id=3]
[ext_resource path="res://src/Player/CannonBase.gd" type="Script" id=4]
[ext_resource path="res://src/Player/DebrisSpawner.gd" type="Script" id=5]
[ext_resource path="res://src/Player/TeleportEffect.gd" type="Script" id=6]
[ext_resource path="res://assets/player_teleport_sheet.png" type="Texture" id=7]

[sub_resource type="CircleShape2D" id=3]
radius = 11.0

[sub_resource type="CircleShape2D" id=4]
radius = 12.0104

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=6]
resource_name = "TELEPORT_START"
length = 2.3
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 1, 1.05, 1.1, 1.15, 1.2, 1.25, 1.7, 1.75, 1.8, 1.85, 1.9, 1.95, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 2, 1, 0, 4, 5, 6, 7, 8, 9, 9, 10, 11, 12, 13, 14, 0 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("..")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "show_player"
} ]
}

[node name="PlayerKinematic" type="KinematicBody2D" groups=["Player"]]
collision_mask = 10
collision/safe_margin = 0.16
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
z_index = -1
z_as_relative = false
texture = ExtResource( 2 )

[node name="BodyCollision" type="CollisionShape2D" parent="."]
position = Vector2( 0, 2 )
shape = SubResource( 3 )

[node name="Hurtbox" type="Area2D" parent="."]
collision_mask = 0
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2( 0, 2 )
shape = SubResource( 4 )

[node name="CannonLeftPivot" type="Position2D" parent="."]
position = Vector2( -12, 7 )
z_index = 1
script = ExtResource( 4 )

[node name="CannonLeft" type="Sprite" parent="CannonLeftPivot"]
rotation = -1.5708
z_index = -1
z_as_relative = false
texture = ExtResource( 3 )
offset = Vector2( 0, 3 )

[node name="BulletSpawnPoint" type="Position2D" parent="CannonLeftPivot/CannonLeft"]
position = Vector2( -4.76837e-07, 8 )

[node name="CannonRightPivot" type="Position2D" parent="."]
position = Vector2( 11, 7 )
z_index = 1
script = ExtResource( 4 )

[node name="CannonRight" type="Sprite" parent="CannonRightPivot"]
rotation = -1.5708
z_index = -1
z_as_relative = false
texture = ExtResource( 3 )
offset = Vector2( 0.5, 3 )

[node name="BulletSpawnPoint" type="Position2D" parent="CannonRightPivot/CannonRight"]
position = Vector2( 0, 8 )

[node name="BulletsContainer" type="Node" parent="."]

[node name="Camera2D" type="Camera2D" parent="."]
current = true
process_mode = 0
limit_smoothed = true
smoothing_enabled = true

[node name="DebrisSpawner" type="Node2D" parent="."]
script = ExtResource( 5 )

[node name="PositionUp" type="Position2D" parent="DebrisSpawner"]
position = Vector2( 0, -5 )

[node name="PositionLeft" type="Position2D" parent="DebrisSpawner"]
position = Vector2( -8, 4 )

[node name="PositionRight" type="Position2D" parent="DebrisSpawner"]
position = Vector2( 8, 2 )

[node name="TeleportEffect" type="Node2D" parent="."]
pause_mode = 2
script = ExtResource( 6 )

[node name="Sprite" type="Sprite" parent="TeleportEffect"]
texture = ExtResource( 7 )
hframes = 15

[node name="TeleportAnimationPlayer" type="AnimationPlayer" parent="TeleportEffect"]
anims/RESET = SubResource( 5 )
anims/TELEPORT_START = SubResource( 6 )

[node name="TeleportInDelay" type="Timer" parent="TeleportEffect"]
one_shot = true
autostart = true

[connection signal="animation_finished" from="TeleportEffect/TeleportAnimationPlayer" to="TeleportEffect" method="_on_TeleportAnimationPlayer_animation_finished"]
[connection signal="timeout" from="TeleportEffect/TeleportInDelay" to="TeleportEffect" method="_on_TeleportInDelay_timeout"]
